# cowfile

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: backend.rs  cowfile.rs  cursor.rs  error.rs  lib.rs  overlay.rs  primitives.rs  traits.rs
tests/: integration.rs
